# dev-api

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  sqlx-data.json
.github/workflows/: build.yml  deploy.yml  general.yml  zapscan.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20211126150359_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: subscription.rs
tests/: health_check.rs
tests/api/: helpers.rs  subscriptions.rs
