[package]
name = "devapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "devapi"


[dependencies]
actix-http = "=3.0.0-beta.10"
actix-web = "=4.0.0-beta.9"
# Using table-like toml syntax to avoid a super-long line!

serde = { version = "1.0.115", features = ["derive"] }
config = { version = "0.11.0", default-features = false, features = ["yaml"] }
sqlx = { version = "0.5.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.15"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
log = "0.4.14"
tracing = { version = "0.1.29", features = ["log"] }
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.2.2"
tracing-log = "0.1.1"
thiserror = "1.0.24"
serde-aux = "1.0.1"
unicode-segmentation = "1.7.1"
validator = "0.12.0"
rand = { version = "0.8", features= ["std_rng"] }
tracing-actix-web = "0.4.0-beta.12"
anyhow = "1.0.40"
base64 = "0.13.0"
argon2 = { version = "0.3", features = ["std"] }
serde_json = "1.0.61"
env_logger = "0.9.0"

[dev-dependencies]
once_cell = "1.7.2"
claim = "0.4.0"
quickcheck = "0.9.2"
quickcheck_macros = "0.9.1"
fake = "~2.3.0"
wiremock = "0.5"
actix-rt = "2"
tokio = { version = "1", features = ["macros"] }
linkify = "0.5.0"



